@@ -9,38 +9,30 @@ deps=
     sqlalchemy
     whoosh
     html5lib
+    mock
 setenv =
     SPHINX_TEST_TEMPDIR = {envdir}/testbuild
 commands=
     {envpython} tests/run.py -I py35 -m '^[tT]est' {posargs}
     sphinx-build -q -W -b html -d {envtmpdir}/doctrees doc {envtmpdir}/html
 
-[testenv:py27]
-deps=
-    mock
-    {[testenv]deps}
-
 [testenv:pypy]
 deps=
-    mock
     simplejson
     {[testenv]deps}
 
 [testenv:du10]
 deps=
-    mock
     docutils==0.10
     {[testenv]deps}
 
 [testenv:du11]
 deps=
-    mock
     docutils==0.11
     {[testenv]deps}
 
 [testenv:du12]
 deps=
-    mock
     docutils==0.12
     {[testenv]deps}
 
